scrapbook: fix tree scrollbar for item picker

--- a/src/scrapbook/itempicker.css
+++ b/src/scrapbook/itempicker.css
@@ -16,6 +16,12 @@ body {
   padding: 8px;
   width: 100%;
   height: 100%;
+
+  /**
+   * This doesn't work in Firefox < 53 due to a bug:
+   * https://bugzilla.mozilla.org/show_bug.cgi?id=504622
+   */
+  min-width: unset;
 }
 
 #tree {
@@ -23,8 +29,7 @@ body {
   box-sizing: border-box;
   border: 1px ridge gray;
   padding: .25em;
-  min-width: 100%;
-  width: 0;
+  width: 100%;
   min-height: 80px;
   font-size: 16px;
   overflow: auto;
